--- a/section_Brief_introduction_to_machine__1.tex
+++ b/section_Brief_introduction_to_machine__1.tex
@@ -16,6 +16,6 @@ In these type of problems the theoretical and the computational aspect are both 
 
 %At this point it is important to start noting
 
-These subtle differences in the way of approaching a problem also reflect themselves in the terminology used. Here most terms have equivalent or similar notations in statistics. To start off, the \textit{dependent} $Y$ is called the target or label and the \textit{independent} variables or \textit{covariates} are named \textit{features} in this case. 
+These subtle differences in the way of approaching a problem also reflect themselves in the terminology used. Here most terms have equivalent or similar notations in statistics. To start off, the \textit{dependent} $Y$ is called the target or label and the \textit{independent} variables, \textit{covariates} or \textit{input variables} are named \textit{features} in this case. 
 %Labels that are representing categorical or discrete variables are also named factors or \textit{qualitative} variables. 
 
