--- a/header.tex
+++ b/header.tex
@@ -7,7 +7,7 @@
 \usepackage{amssymb}
 \usepackage[english]{babel}
 \usepackage[utf8]{inputenc}
-
+\usepackage{amsthm}
 
 \newcommand{\calG}{\mathcal{G}}
 \newcommand{\calN}{\mathcal{N}}
