--- a/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
+++ b/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
@@ -77,8 +77,14 @@ Given two line segments whose lengths are $a$ and $b$ respectively there is a
 real number $r$ such that $b=ra$.
 \end{lemma}
 
+For the case of a random forest classifier, the margin function will be defined as
 
+$$mg(\textbf{x},\textbf{y}) =  P_Theta(h(\textbf{x}) = \textbf{y})  
+- max_{j\neq \textbf{y}}\left(P_Theta(h_k(\textbf{x}) = j) \right) $$ \label{eq:rf-marginFunRf}
 
+and the strength will be defined as 
+
+$$s =  \Expect_{\textbf{x},\textbf{y}}\left mg(\textbf{x},\textbf{y}) \right) $$ \label{eq:rf-strength}
 
 
 
