--- a/header.tex
+++ b/header.tex
@@ -9,6 +9,9 @@
 \usepackage[utf8]{inputenc}
 \usepackage{amsthm}
 
+%lazy boldface..
+\newcommand{\b}{\textbf}
+
 \newcommand{\calG}{\mathcal{G}}
 \newcommand{\calN}{\mathcal{N}}
 \newcommand{\calE}{\mathcal{E}}
