--- a/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
+++ b/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
@@ -88,7 +88,7 @@ $$s =  \Expect_{\textbf{x},\textbf{y}} \left[ mr(\textbf{x},\textbf{y} ) \right]
 
 Assuming that $s \geq 0$ we have that the generalization error $PE \leq var(mr)/sˆ2$ by Chebyshev's inequality. 
 
-Define $\hat{j}(\textbf{x},\textbf{y}) $ 
-
+Define $\hat{j}(\textbf{x},\textbf{y}) \b{x}$ 
+\b{x}
 
 
