--- a/header.tex
+++ b/header.tex
@@ -10,7 +10,7 @@
 \usepackage{amsthm}
 
 %lazy boldface..
-\newcommand{\b}{\textbf}
+\let\b\textbf
 
 \newcommand{\calG}{\mathcal{G}}
 \newcommand{\calN}{\mathcal{N}}
