--- a/header.tex
+++ b/header.tex
@@ -7,10 +7,10 @@
 \usepackage{amssymb}
 \usepackage[english]{babel}
 \usepackage[utf8]{inputenc}
-\usepackage{amsthm}
+%\usepackage{amsthm}
 
 %lazy boldface..
-\let\b\textbf
+%\let\b\textbf
 
 \newcommand{\calG}{\mathcal{G}}
 \newcommand{\calN}{\mathcal{N}}
