--- a/header.tex
+++ b/header.tex
@@ -11,7 +11,9 @@
 
 %lazy boldface..
 %\let\b\textbf
+\def\b{\textbf}
 
+%Math set letters
 \newcommand{\calG}{\mathcal{G}}
 \newcommand{\calN}{\mathcal{N}}
 \newcommand{\calE}{\mathcal{E}}
