--- a/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
+++ b/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
@@ -81,10 +81,10 @@ For the case of a random forest classifier, the margin function will be defined 
 
 \begin{equation} \label{eq:expectedError}
 mr(\textbf{x},\textbf{y}) =  P_{Theta}(h(\textbf{x}) = \textbf{y})  
-- P_{Theta}(h_k(\textbf{x}) = \hat{j}(\textbf{x},\textbf{y})) 
+- P_{Theta}(h_k(\textbf{x}) = \hat{j}(\textbf{x},\textbf{y}) ) 
 
 \\ 
-= \Expect_{\Theta}\left[  I(h(\textbf{x},\Theta )=y) - I(h(\textbf{x},\Theta )=\hat{j}  \right]
+= \Expect_{\Theta} \left[  I(h(\textbf{x},\Theta )=y) - I(h(\textbf{x},\Theta )=\hat{j})  \right]
 
 \end{equation} \label{eq:rf-marginFunRf}
 
