--- a/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
+++ b/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
@@ -80,8 +80,8 @@ real number $r$ such that $b=ra$.
 For the case of a random forest classifier, the margin function will be defined as
 
 \begin{equation}\label{eq:rf-marginFunRf}
-mr(\textbf{x},\textbf{y}) =  P_{Theta}(h(\textbf{x}) = \textbf{y})  
-- P_{Theta}(h_k(\textbf{x}) = \hat{j}(\textbf{x},\textbf{y}) ) 
+mr(\textbf{x},\textbf{y}) =  P_{\Theta}(h(\textbf{x}) = \textbf{y})  
+- P_{\Theta}(h_k(\textbf{x}) = \hat{j}(\textbf{x},\textbf{y}) ) 
 
 \\ 
 = \Expect_{\Theta} \left[  I(h(\textbf{x},\Theta ) = y ) - I( h( \textbf{x},\Theta ) = \hat{j})  \right]
