--- a/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
+++ b/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
@@ -90,8 +90,9 @@ where $\hat{j}(\textbf{x},\textbf{y}) = arg max_{j\neq \textbf{y}} P_{Theta}(h(\
 
 Here the margin function is described as the expectation taken over another function which is called the \textbf{raw margin function}\label{eq:rf-rawMarginFun}. Intuitively, the raw margin function takes each sample to be $1$ or $-1$ according to whether the classifier can correctly classify or not the sample's label, given $\Theta$.
 
+It is straight to see that $mr(\textbf{x},\textbf{y})ˆ2 = \Expect_{\Theta, \Theta'}\left[ rmg(\Theta,\textbf{x},\textbf{y} ) rmg(\Theta',\textbf{x},\textbf{y} )   \right] $. 
 
-Now let the strength will be defined as 
+Let the strength will be defined as 
 
 $$s =  \Expect_{\textbf{x},\textbf{y}} \left[ mr(\textbf{x},\textbf{y} ) \right] $$. \label{eq:rf-strength}
 
