--- a/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
+++ b/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
@@ -96,8 +96,8 @@ Here the margin function is described as the expectation taken over another func
 With these definitions, it is straight to see that 
 
 %\begin{equation}%\end{equation}
-$mr( \textbf{x},\textbf{y} )^2 = \Expect_{\Theta, \Theta'} \left[ rmg( \Theta,\textbf{x},\textbf{y} ) rmg(\Theta',\textbf{x},\textbf{y} )  \right] $
-%   . $$
+$mr( \textbf{x},\textbf{y} )^2 = \Expect_{\Theta, \Theta'} \left[ rmg( \Theta,\textbf{x},\textbf{y} ) \ rmg(\Theta',\textbf{x},\textbf{y} )  \right] $.
+
 %\end{equation}
 
 Let the strength will be defined as 
