--- a/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
+++ b/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
@@ -88,8 +88,8 @@ mr(\textbf{x},\textbf{y}) =  P_{\Theta}(h(\textbf{x}) = \textbf{y}) - P_{\Theta}
 
 where 
 %\begin{equation}%\end{equation}
-$$\hat{j}(\textbf{x},\textbf{y}) $$.
-%= arg max_{j\neq \textbf{y}} P_{Theta}(h(\textbf{x}) = \textbf{y})
+$$\hat{j}(\textbf{x},\textbf{y}) = arg max_{j\neq \textbf{y}}  $$.
+% P_{Theta}(h(\textbf{x}) = \textbf{y})
 %\end{equation}
 
 Here the margin function is described as the expectation taken over another function which is called the \textbf{raw margin function}\label{eq:rf-rawMarginFun}. Intuitively, the raw margin function takes each sample to be $1$ or $-1$ according to whether the classifier can correctly classify or not the sample's label, given $\Theta$.
