--- a/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
+++ b/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
@@ -108,7 +108,7 @@ $$mr( \textbf{x},\textbf{y} )^2 = \Expect_{\Theta, \Theta'} \left[ rmg( \Theta,\
 
 This in turn implies that
 
-\begin{equation}
+\begin{equation}\label{eq:rf-marginFunVar}
 \begin{split}
 var(mr) & =  \Expect_{\Theta, \Theta'} 
 			\left[ 
