--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -57,6 +57,20 @@
     year = {2001}
 }
 
+@Article{breiman-randomforests,
+author="Breiman, Leo",
+title="Random Forests",
+journal="Machine Learning",
+year="2001",
+volume="45",
+number="1",
+pages="5--32",
+issn="1573-0565",
+doi="10.1023/A:1010933404324",
+url="http://dx.doi.org/10.1023/A:1010933404324"
+}
+
+
 @book{Mitchell-MLearning,
   title = {{Machine Learning}},
   author = {Mitchell, T.},
