--- a/header.tex
+++ b/header.tex
@@ -8,6 +8,7 @@
 \usepackage[english]{babel}
 \usepackage[utf8]{inputenc}
 %\usepackage{amsthm}
+\usepackage{qtree} %para dibujar grafos/arboles
 
 %lazy boldface..
 %\let\b\textbf
