--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -11,6 +11,7 @@
   year = 2009
 }
 
+
 @InProceedings{ McKinney-pandas,
   author    = { Wes McKinney },
   title     = { Data Structures for Statistical Computing in Python },
@@ -49,6 +50,17 @@
  pages={2825--2830},
  year={2011}
 }
+
+@BOOK{breiman-cart84,
+  author        = {L. Breiman and J. Friedman and R. Olshen and C. Stone},
+  title         = {{Classification and Regression Trees}},
+  publisher     = {Wadsworth and Brooks},
+  address       = {Monterey, CA},
+  year          = {1984},
+  note          = {new edition \cite{cart93}?},
+  remarks       = {cited in \cite{cslu:esca98mm, cslu:icslp98cronk, cstr:unitsel97} for CART, clustering, and decision trees}
+}
+
 
 @ARTICLE{breiman-statisticalmodeling,
     author = {Leo Breiman},
