--- a/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
+++ b/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
@@ -8,6 +8,7 @@ Notar que todo lo que esta en italica es tipo highlighter de textos de otros aut
 
 
 \section{Leo Breiman}\cite{breiman-randomforests}
+For a more detailed explanation of a decision tree, please refer to \cite{breiman-cart84}
 
 
 \textit{
