--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -189,11 +189,22 @@ url="http://dx.doi.org/10.1023/A:1010933404324"
 
 
 
-
 @misc{plan_nacional_chagas,
   author = {Ministerio de Salud Argentina},
   title = {{Plan Nacional de Chagas}},
   url = {http://www.msal.gob.ar/chagas/},
   year = {2016},
   note = {[Online, accessed 9-may-2016]},
+}
+
+
+@article{decistionTreesNP,
+  title = {{Constructing Optimal Binary Decision Trees is NP-complete}},
+  author = {L Hyafil, and R. L. Rivest},
+  journal = {Information Processing Letters},
+  volume = {5},
+  number = {1},
+  pages = {15-17},
+  year = {1976},
+  publisher = {Elsevier},
 }
