--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -208,3 +208,16 @@ url="http://dx.doi.org/10.1023/A:1010933404324"
   year = {1976},
   publisher = {Elsevier},
 }
+
+@article{HoFirstRandomForest,
+    title = {{Random Decision Forests}},
+    author = {T Hoe},
+    booktitle = {Proceedings of the Third International Conference on Document Analysis and Recognition (Volume 1) - Volume 1},
+    series = {ICDAR '95},
+    year = {1995},
+    isbn = {0-8186-7128-9},
+    pages = {278--},
+    url = {http://dl.acm.org/citation.cfm?id=844379.844681},
+    publisher = {IEEE Computer Society},
+   
+}
