--- a/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
+++ b/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
@@ -3,9 +3,7 @@
 Notar que todo lo que esta en italica es tipo highlighter de textos de otros autores :)
 %NOTAR QUE TO LO QUE ESTA EN ITALICA ES TIPO HIGHLIGHTER DE OTROS TEXTOS DE OTROS AUTORES}
 
-
 \section{Classifier : Random Forests}
-
 
 Random Forests are a special type of classifier in which a set of weaker learners are used together to build a stronger classifier. The idea is to have \textit{Decision Trees} as week learners and to ensemble a group of trees together.
 
@@ -32,11 +30,12 @@ To illustrate this method, an instance is show in figure \ref{rf-treeFigure}. Th
 	[.{\textit{M}}  ]]]
 		
 \end{figure}
+
 \smallskip
+
 %[.{\textit{M}} ] [.{\textit{F}} ]
 
-Given a sample from training set $\mathrm{T}$, a decision tree would predict its target class by traveling the sample until a leaf node is reached. In this method hyper-parameters of the model include the length of the tree and the metric used to decide on the \textit{best} split. Parameters are limited to the features selected at each node along with the splitting rule threshold. Note that the construction of optimal binary decision trees is NP-Complete \cite{decisionTreesNP}, thus it is understandable that it is computationally prohibitive to fit all of these parameters at once. However, once a learner is fit, predicting targets for new samples is very simple: a tree defines a partition of feature space in hyper-rectangles and the sample's hyper-rectangle would define its target value.
-
+Given a sample from training set $\mathrm{T}$, a decision tree would predict its target class by traveling the sample until a leaf node is reached. In this method hyper-parameters of the model include the length of the tree and the metric used to decide on the \textit{best} split. Parameters are limited to the features selected at each node along with the splitting rule threshold. Note that the construction of optimal binary decision trees is NP-Complete \cite{decisionTreesNP}, thus it is computationally prohibitive to fit all of these parameters at once. However, once a learner is fit, predicting targets for new samples is straightforward. A tree defines a partition of feature space in disjoint sets $A_1,...,A_J$ such that the sample's predicted output $\hat{y}$ is $c_j$ if the sample belongs to $A_j$. Here $c_j$ is one of the possible values taken by the target variable $y$ in the training set. And by the way trees were built, each $A_j$ is a hyper-rectangles in feature space.
 
 For a more complete explanation of a decision tree for classification or regression problems, please refer to \cite{breiman-cart84}.
 
@@ -44,6 +43,11 @@ For a more complete explanation of a decision tree for classification or regress
 \textbf{L Breiman Paper}\cite{breiman-randomforests}
 
 
+Random Forests where a natural ensemble extension of Decision Trees first described by \cite{HoFirstRandomForest}. 
+
+Random Forests look like a natural 
+
+For the case of Random Forests, first derived in 
 \textit{
 Random forests are a combination of tree predictors
 such that each tree depends on the values of a random
