--- a/trash.tex
+++ b/trash.tex
@@ -21,7 +21,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 
-
+\usepackage{qtree}
 \usepackage{amssymb}
 \usepackage{hyperref}
 
@@ -83,125 +83,86 @@ Juan de Monasterio
 Texstudio is better at helping to write fast tex documents using spell-checkers, pre-loaded commands and \textit{stuff}. All of the following text is just copy/paste trash being tested before being added to a real doc.
 
 
-
-
 \end{abstract}
 
 
-
-
-\section{Gradient Boosting Variation}
-
-\subsection{Boosting Trees    }
-
-$\Theta$
-
-The objective function differences minimization objectives. 
-
-Predictive power: how well the algorithm fits the data used for training and, hopefully, the \textit{true} underlying distribution
-
-+ Regularization, favors parsimonious models. This is because all models approximate natural/processes to some degree, so if a simpler model can be used with the same predictive power, then this model should be used.  
-
-\begin{equation} \label{eq:objFunction}
-Obj(\Theta) \ = \ L(\Theta) + R(\Theta)
-\\
-%\sum_{i=0}^{\infty} a_i x^i
-\end{equation}
-
-When building a model of ensemble trees, a higher model will be learning on other \textit{weaker} decision trees. If $Tr$ is a set of tree models and $K$ a finite tree indexer over $Tr$, then trees are the model's parameters and
-\[ y = \sum_k f_k(x) , \ f_k \in Tr \ \forall k \in K \]
-
-The objective function would account for these relationships in the trees and thus we would have that
-
-\[ Obj(\Theta) = \sum_i^n l(y_i,\hat{y}^i))  +  \sum_k R(f_k) \] \label{eq:boositing-objfunction} \footnote{In the formula \ref{eq:boositing-objfunction} }
-%    
-
-At a higher level we would have that $\Theta$ is a parameter encoding lower trees' parameter information. If $\theta_k$ is the parameter associated for each tree model $f_k$ then $\Theta =  \bigcup_{k \in K} \theta_k  \cup \theta_0$ where the parameter $\theta_0$ is not associated to any tree and reserved to characterize the tree assembly. An optimization routine will have to collectively fit all of the parameters in $\Theta$ to learn this model. This is prohibitively costly in practice so optimization heuristics are used instead. 
-
-\subsubsection{Additive Training}
-
-A first take on this optimization problem goes along the way of greedy algorithms. One tree is fit at a time and new trees are then successively added in later steps to improve on previous trees' errors.
-
-Consider $t$ the step indexer of the algorithm, where $t \in {0,..,K}$. In step $t$, let $Obj_t(\Theta)$ be the objective function and $\hat{y}_t^i$ be the predictive target respectively. Then the $i$-eth target's value at each step would iterate in the following way:
-
-\begin{equation} \label{eq:gb-targetSteps}
-\hat{y}_0^i = 0 \\
-\ \ \ ... \\ 
-\hat{y}_t^i = \sum_{k=1}^{t} f_k(x^i) = \hat{y}_{t-1}^i +  f_t(x^i)
-%\sum_{i=0}^{\infty} a_i x^i
-\end{equation}
-
-where each trees is added in such a way that we are minimizing
-
-
-\begin{equation} \label{eq:gb-objSteps1}
-%\[
-%Obj_t(\Theta) = \sum_i^n l(y_t^i,\hat{y_t}^i)) +   \sum_k^t R(f_k) \\
-= \sum_i^n l(y^i,\hat{y}_{t-1}^i +  f_t(x^i) ) +   c(t) + R(f_t) \\
-%= \sum_i^n {2(y^i -(\hat{y}_{t-1}^i +  f_t(x^i)) )} + (\hat{y}_{t-1}^i +  f_t(x^i))^2 +  f_t + c'(t)
-%\]
-\end{equation}
-
-
-\begin{equation} \label{eq:gb-objFun}
-Obj_t(\Theta) \approx  \sum_i^n {g^i \theta_{q(x^i)} + \frac{1}{2} h^i \theta_{q(x^i)}^2 } + \gamma T 
-+ \frac{1}{2}\lambda \sum_{j=1}^T\theta_j^2 \\
-=   \sum_{j=1}^T\left(  \sum_{i \in T_j} (g^i )\theta_{j} + \frac{1}{2} \sum_{i \in T_j} (h^i + \lambda ) \theta_{j}^2  \right) + \gamma T \\
-\end{equation}
-
-
-As our minimum objective value. In this context, we call this value the \textbf{gain}. Since it is the improvement brought on to the ensemble by tree $f_t$. It is a measure or score of how performing a $q(x)$ tree scoring is.   
-
 \section{Random Forests}
+
+Random Forests are a special type of classifier in which a set of weaker learners are used together to build a stronger classifier. The idea is to have \textit{Decision Trees} as week learners and to ensemble a group of trees together.
+	
+\subsection{Decision Tree Learners}
+
+Decision Trees will not be described in detail in this work, but a brief overview can be given as follows. 
+
+The algorithm builds a tree in the graph-theory sense where each node has a rule based on set belonging. Each rule defines a linear (or similar) partition of the training set where rules are built from the sample's features. At each node we would have a decision to include or exclude a sample $s$ from that partition by checking if $X_i(s) \in U$ where $X_i$ might be any given feature of the data and $U$ is a subset of the same feature's space.
+
+For numerical features, $U$ will be of the form $(-\infty,c]$ where $c \in \mathbb{R}$ is any given number predefined by each rule. For categorical features, $U$ will be a subset of possible values of that feature.
+
+A tree is generally grown in an iterative way from the top down \footnote{In this context the \textit{top} of a tree refers to the root of it.}. All samples in the training set would enter the tree at the root node and then travel down according to their fulfillment of each node's rule. 
+
+The most common variations of this learner build rules at each nodes in a greedy fashion, where a metric is locally optimized in each node to decide on the best splitting decision. The metrics used to build each rule score, for the resulting sets, are the \textit{Gini impurity measure} and the \textit{entropy} or \textit{information gain} criterion. The former optimizes for misclassification error in the resulting sets, if all samples were to be tagged with one predicted target-label. The latter optimizes for information entropy, which is analogous to minimizing \textit{Kullback-Liebler divergence} of the resulting sets with respect to the original set. This partitioning continues iteratively until a predefined optimization or iteration threshold is met. 
+
+To illustrate this method, an instance is show in figure \ref{rf-treeFigure}. This classification tree example is built for the two class problem of gender prediction using data from CDRs:
+%[.{\textit{Woman}}]
+\smallskip
+\begin{figure}[h]\label{rf-treeFigure}
+	\Tree[.{ $Calling\_Volume \leq 23$ } [.{$Province \in \{ San Luis, Chubut \} $} [.{$Time\_Weekend \geq 16$} [.{\textit{M}} ] [.{\textit{F}} ]  ]
+	[.{$Calls\_Weekdays \leq 48$} 
+	[.{ $Time\_Weekday \geq 17$} [.{\textit{M}} ] [.{\textit{F}} ]] [.{\textit{F}} ] ]  ]
+	[.{$Calls\_Mondays \geq 2$} [.{$Province \in \{ Chubut, Cordoba \} $}  [.{\textit{M}} ] [.{\textit{F}} ] ]
+	[.{\textit{M}}  ]]]
+		
+\end{figure}
+\smallskip
+%[.{\textit{M}} ] [.{\textit{F}} ]
+
+Given a sample from training set $\mathrm{T}$, a decision tree would predict its target class by traveling the sample until a leaf node is reached. In this method hyper-parameters of the model include the length of the tree and the metric used to decide on the \textit{best} split. Parameters are limited to the features selected at each node along with the splitting rule threshold. Note that the construction of optimal binary decision trees is NP-Complete \cite{decisionTreesNP}, thus it is computationally prohibitive to fit all of these parameters at once. However, once a learner is fit, predicting targets for new samples is straightforward. A tree defines a partition of feature space in disjoint sets $A_1,...,A_J$ such that the sample's predicted output $\hat{y}$ is $c_j$ if the sample belongs to $A_j$. Here $c_j$ is one of the possible values taken by the target variable $y$ in the training set. And by the way trees were built, each $A_j$ is a hyper-rectangles in feature space.
+
+For a more complete explanation of a decision tree for classification or regression problems, please refer to \cite{breiman-cart84}.
+
+\subsection{Extension to Random Forests}
 \textbf{L Breiman Paper}
+It is not difficult to see the that Decision Trees are prone to over-fitting the training set. With the correct amount of features derived from the data we can build a tree that perfectly classifies all samples in the training set. Thus it is generally a difficult task to generalize trees when data is scarce or when the training set is not representative of the true underlying distribution. 
 
-\textit{
-Random forests are a combination of tree predictors
-such that each tree depends on the values of a random
-vector sampled independently and with the same
-distribution for all trees in the forest.}
+Random Forests are a natural extension of Decision Trees to counter this problem. First described by \cite{HoFirstRandomForest} the idea is to use a combination of different decision trees as one single learner. The output prediction class given by the learner is based on the majority vote of all the trees.
 
-\textit{The generalization error for forests converges a.s. to a limit
-as the number of trees in the forest becomes large.}
+Because each single tree is built independently on the values of the others, random forests have a lower variance than single decision trees and, with enough trees, can still achieve low bias rates. As we will later see, the prediction error of the forest depends on the inter-tree correlations and on the accuracy of each tree.
+%Some care has still to be taken care of 
 
-\textit{The generalization error of a forest of tree classifiers depends on the strength of the individual trees in the
-forest and the correlation between them. Using a random selection of features to split each node yields
-error rates that are more with respect to noise.}
+There is an extensive literature on this method, its different variants and their benefits. For this section we will use heavily the work presented in \cite{breiman-randomforests}. All variant rely on different randomization processes to construct the forest and this gives rise to the method's name. Examples include:
+\begin{itemize}
+	\item At each node, randomly subset the amount of features that can be used to build the splitting rule. 
+	\item At each node, select a random rule from a number of \textit{best} rules for that node.
+	\item When building each tree, randomly hide a set of features to be used for any of its nodes.
+	\item Each tree is built using a bootstrapped sample from the original training set.
+\end{itemize}
+% randomly choosing a subset selection of features to 
 
-\textit{Internal estimates monitor error, strength, and correlation and these are used to show
-the response to increasing the number of features used in the splitting. Internal estimates are also used to
-measure variable importance.
-d}
+In general terms, if we let $N$ be the number of samples in the training set, $K$ be a number of trees, $\Theta_k$ be the parameters for the $k$-th tree and $h(\textbf{x},\Theta_k)$ the corresponding tree classifier.  The creation of a random forests involves an iterative procedure where at each $k$ step $\Theta_k$ is drawn from the same distribution but independently of the previous parameters $\Theta_1, \ ..., \ \Theta_{k-1}$ created at previous steps. 
 
-
-
-Random subspace: each tree is grown using a random selection of features.
-
-Given $K$ number of trees, let $\Theta_k$ encode the parameters for the $k$-th tree and $h(\textbf{x},\Theta_k)$ the corresponding classifier. Let $N$ be the number of samples in the training set. The creation of a random forests involves an iterative procedure where at each $k$ step $\Theta_k$ is drawn from the same distribution but independently of the previous parameters $\Theta_1, \ ..., \ \Theta_{k-1}$ created at previous steps. 
-
-Bagging: to grow each tree a random selection (without replacement) on the training set is used. 
-
-Random split selection: choose a random split among the $K$ best splits. $\Theta$ will be encoded by a vector of randomly drawn integers from 1 to $M$ which is part of the model's hyperparameters.
+To expand on the statistical advantages of Random Forests we must first introduce some notation:
 
 Let $\{h_k(\textbf{x})\}_{i=1}^K$  \footnote{There is an abuse of notation by noting trees as $h_k(\textbf{x}$ and not $h(\textbf{x}, \Theta_k)$ } be a set of classifying trees and let $I$ denote the indicator function.  Define the margin function as
-
-%\begin{equation} 
 
 $$mg(\textbf{x},\textbf{y}) =  \frac{1}{K}   \sum_{k=1}^K I(h_k(\textbf{x}) = \textbf{y})  
 - max_{j\neq \textbf{y}}\left(\frac{1}{K} \sum_{k=1}^K I(h_k(\textbf{x}) = j) \right) $$ \label{eq:rf-marginFun}
 
-%\end{equation}
-$ P_{\textbf{x}, \textbf{y} }(mg(\textbf{x}, \textbf{y}) < 0) $
-
-
 The function measures, in average, how much do the trees vote for the correct class in comparison to all other classes. 
 
-\subsubsection{Lemma}
+
+Let the predictive error of the forest be defined as:
+%\end{equation}
+$$ PE* = P_{\textbf{x}, \textbf{y} }(mg(\textbf{x}, \textbf{y}) < 0) $$
+
+
+
+\begin{lemma}
 When $K$ is large then the prediction error converges almost surely to 
 
 $$ P_{\textbf{x}, \textbf{y} } \left( P_{\Theta} (h(\textbf{x}, \Theta) = \textbf{x}) - max_{j \neq \textbf{y}} P_{\Theta} (h(\textbf{x}, \Theta) = j) < 0 \right ) $$
+\end{lemma}
 
-\subsubsection{Proof}
+\begin{proof}
 The proof follows from seeing that given a training set, a parameter $\Theta$ and a class $j$ then 
 $$\forall \textbf{x} \lim_{K\to\infty} \frac{1}{K} \sum_{k=1}^K I(h_k(\textbf{x}) = j) \ =   \ P_\Theta(h(\theta,\textbf{x}) = j) $$
  almost surely.
@@ -219,25 +180,28 @@ and that there is a convergence almost everywhere of $$ \frac{N_k}{N} = \sum_{n=
 If we let $C = $ $\bigcup\limits_{k=1}^{K} C_{k}$ where each $C_k$ are zero-measured sets representing the points where the sequence is not converging. We will finally have that  outside of $C$, 
 
 $$ \frac{1}{N} \sum_{n=1}^N I(h_n(\textbf{x}) = j) \xrightarrow[N \to \infty]{} \sum_k^K    P_{\Theta}(\phi(\Theta)= k) I(\textbf{x} =j ) \ = \ P_{\Theta}(h(\textbf{x}, \Theta) = j)  $$ 
+\end{proof}
 
 \subsection{Predictive error bounds}
 
 Random Forests are built upon a bag of weaker classifier, of which each individual estimator has a different prediction error. To build an estimate on the generalization error of the ensemble classifier, these individual scores and the inter-relationship between them must be taken into account. For this purpose, the \textit{strength} and \textit{correlation} of a Random Forest must be analyzed to arrive on an estimate of the generalization error.
-
-
 
 %\begin{lemma}
 %Given two line segments whose lengths are $a$ and $b$ respectively there is a 
 %real number $r$ such that $b=ra$.
 %\end{lemma}
 
+\begin{theorem}
+There is an upper bound for the generalization error.
+\end{theorem}
 Define $\hat{j}(\textbf{x},\textbf{y})$ as $arg max_{j\neq \textbf{y}} P_{\Theta}(h(\textbf{x}) = j)$ and let the margin function for a random forest be defined as
 
 \begin{equation}\label{eq:rf-marginFunRf}
-mr(\textbf{x},\textbf{y}) =  P_{\Theta}(h(\textbf{x}) = \textbf{y}) - P_{\Theta}(h(\textbf{x}) = \hat{j}) 
+\begin{split}
+mr(\textbf{x},\textbf{y}) = & P_{\Theta}(h(\textbf{x}) = \textbf{y}) - P_{\Theta}(h(\textbf{x}) = \hat{j}) 
 \\ 
-= \Expect_{\Theta} \left[  I(h(\textbf{x},\Theta ) = y ) - I( h( \textbf{x},\Theta ) = \hat{j} )  \right]
-%
+= & \Expect_{\Theta} \left[  I(h(\textbf{x},\Theta ) = y ) - I( h( \textbf{x},\Theta ) = \hat{j} )  \right]
+\end{split}
 \end{equation} 
 
 
@@ -254,33 +218,83 @@ $$mr( \textbf{x},\textbf{y} )^2 = \Expect_{\Theta, \Theta'} \left[ rmg( \Theta,\
 
 This in turn implies that
 
-\begin{equation}
+\begin{equation}\label{eq:rf-marginFunVar}
 \begin{split}
-var(mr) & =  \Expect_{\Theta, \Theta'}
+var(mr) & =  \Expect_{\Theta, \Theta'} 
 			\left[ 
 				cov_{\textbf{x},\textbf{y}}
 				(rmg(\Theta,\textbf{x},\textbf{y} )rmg(\Theta',\textbf{x},\textbf{y} )) 
-			\right] 
-		& =  \Expect_{\Theta, \Theta'}
+			\right] \\
+& =  \Expect_{\Theta, \Theta'}
 			\left[ 
 				\rho(\Theta, \Theta')\sigma(\Theta)\sigma(\Theta')
 			\right] 
-
 \end{split}
 \end{equation}
 
-Let the strength will be defined as 
+where $ \rho(\Theta, \Theta')$ is the correlation between $rmg(\Theta,\textbf{x},\textbf{y})$ and $rmg(\Theta',\textbf{x},\textbf{y})$, and $\sigma(\Theta)$ is the standard deviation of $rmg(\Theta,\textbf{x},\textbf{y})$. In both cases, $\Theta$ and $\Theta'$ are given to be fixed. 
 
-$$s =  \Expect_{\textbf{x},\textbf{y}} \left[ mr(\textbf{x},\textbf{y} ) \right] $$. \label{eq:rf-strength}
+Equation \ref{eq:rf-marginFunVar} in turn implies that 
 
-%Assuming that $s \geq 0$ we have that the generalization error $PE \leq var(mr)/sˆ2$ by Chebyshev's inequality. 
+\begin{equation}\label{eq:rf-varianceBound}
+\begin{split}
+var(mr) & =  \overline{\rho} (\Expect_{\Theta}\left[ \sigma(\Theta)\right] )^2 \\
+		& \leq  \overline{\rho} \Expect_{\Theta} \left[ var(\Theta) \right] 
+\end{split}
+\end{equation}
 
-Define 
+where we have conveniently defined $\overline{\rho}$ as 
+
+\begin{equation}\label{eq:rf-meanCorrelation}
+ \frac{\Expect_{\Theta, \Theta'} \left[ \rho(\Theta, \Theta') \sigma(\Theta) \sigma(\Theta')\right]}
+ {\Expect_{\Theta, \Theta'} \left[ \sigma(\Theta) \sigma(\Theta')\right]}
+\end{equation}
+
+Note this is the mean value of the correlation.
+
+Let the strength of the set of weak classifiers in the forest be defined as 
+
+$$s =  \Expect_{\textbf{x},\textbf{y}} \left[ mr(\textbf{x},\textbf{y} ) \right] $$.\label{eq:rf-strength}
+
+Assuming that $s > 0$ we have that the prediction error is bounded by 
+\begin{equation}\label{eq:rf-predictiveErrorBound1}
+	PE^* \leq var(mr)/s^2
+\end{equation}
+by Chebyshev's inequality. On the other hand it can also be noted that
 
 
+\begin{equation}\label{eq:rf-expectedVarBound}
+\begin{split}
+\Expect_{\Theta} \left[ var(\Theta) \right]  & \leq \Expect_{\Theta} \left[ \Expect_{\textbf{x},\textbf{y}}\left[ rmg(\Theta,\textbf{x},\textbf{y})   \right]  \right]^2 -s^2  \\
+								& \leq 1-s^2
+\end{split}
+\end{equation}
+
+\begin{proof}
+We can use  \ref{eq:rf-varianceBound}, \ref{eq:rf-predictiveErrorBound1} and \ref{eq:rf-expectedVarBound} to establish the upper bound for the prediction error we are looking for
+\begin{equation}\label{eq:rf-PEBound}
+PE^* \leq \overline{\rho}\frac{(1-s^2)}{s^2}
+\end{equation}
+\end{proof}
+
+This bound on the generalization error shows the importance of the strength of each individual weak classifier in the forest and the correlation interdependence among them. The author \cite{breiman-randomforests} of the algorithm remarks here that this bound may not be strong. He also puts special importance on the ratio between the correlation and the strength $\frac{\overline{\rho}}{s^2}$ where this should be as small as possible to build a strong classifier.	 
 
 
+\subsection{Binary Class}
+In the context of a binary class problem, where the target variable can only take two values, there are simplifications to the formula \ref{eq:rf-PEBound}. In this case, the margin function takes the form of $2 P_{\Theta}(h(\textbf{x}) = \textbf{y}) -1$ and similarly the raw margin function results in $2 I(h(\textbf{x}, \Theta) = \textbf{y}) -1$. 
 
+The bounds prediction error bounds derived in \ref{eq:rf-predictiveErrorBound1} assume that $s >0$ which in this case results in
+$$ \Expect_{\textbf{x},\textbf{y}} \left[ P_{\Theta}(h(\textbf{x}) = \textbf{y}) \right] > \frac{1}{2} $$
+
+Also, the correlation between $I(h(\textbf{x}, \Theta) = \textbf{y})$ and \  $I(h(\textbf{x}, \Theta') = \textbf{y})$, denoted $\overline{\rho}$ will take the form
+
+$$ \overline{\rho} =  \Expect_{\Theta,\Theta'} \left[ \rho \left( h(\cdot{},\Theta) ,h(\cdot{},\Theta') \right)   \right] $$
+
+
+\textbf{VARIABLE IMPORTANCE}
+
+\textit{Internal estimates monitor error, strength, and correlation and these are used to show
+	the response to increasing the number of features used in the splitting. Internal estimates are also used to measure variable importanced}
 
 \subsection{Summary of Results}
 
